--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -32,7 +32,7 @@
         authorized_key:
           user: "{{ var_ssh_user }}"
           state: present
-          key: "{{ lookup('file', '/vagrant/keys/key.pub') }}"          
+          key: "{{ lookup('file', '/vagrant/files/key.pub') }}"          
       
       # # Firewall. Ansible rules not the best for ansible
       # - name: firewall  configuration
@@ -113,9 +113,9 @@
         shell: consul keygen
         register: var_consul_secret
         
-      - name: Create Consul Service in systemd. 
+      - name: Create Consul Service in pr.
         template:
-          src: consul.service.j2
+          src: files/consul.service.j2
           dest: /etc/systemd/system/consul.service
           owner: root
           group: root
